--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>21</java.version>
+		<spring-security.version>6.2.2</spring-security.version>
+		<spring.version>6.1.4</spring.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -29,7 +31,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
@@ -46,6 +51,8 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
+
+
 
 	<build>
 		<plugins>
