--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+springdoc.api-docs.path=/api-docs
+
+
 # PostgreSQL veritaban? ba?lant?s? için gerekli ayarlar
 spring.datasource.url=jdbc:postgresql://localhost:5432/library
 spring.datasource.username=postgres
